# ontology-access-kit

./: .gitattributes  .gitignore  Makefile  README.md  architecture.html  best-practice.html  cli.html  concepts.html  contributing.html  faq.html  genindex.html  glossary.html  index.html  index.rst  introduction.html  main.py  mixs_inspired_data.yaml  mixs_inspired_schema.yaml  mixs_inspired_schema_expanded.yaml  notebooks.html  objects.inv  py-modindex.html  pyproject.toml  rdf-owl-layering.html  search-syntax.html  search.html  searchindex.js  selectors.html  semsimian_config.yaml  tox.ini  utilities.html
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
DIRNAME/: oaklib.utilities.graph.networkx_bridge.html  oaklib.utilities.graph.relationship_walker.html  oaklib.utilities.lexical.lexical_indexer.html  oaklib.utilities.obograph_utils.html  oaklib.utilities.subsets.slimmer_utils.html  obolib.utilities.graph.relationship_walker.html  obolib.utilities.lexical.lexical_indexer.html  obolib.utilities.obograph_utils.html
_modules/: index.html
_sources/: architecture.rst.txt  cli.rst.txt  concepts.rst.txt  faq.rst.txt  glossary.rst.txt  index.rst.txt  introduction.md.txt  introduction.rst.txt  notebooks.md.txt  utilities.rst.txt
_static/: copybutton.js
association/: Any.md  Association.md  AssociationChange.md  Boolean.md  Curie.md  Datetime.md  Integer.md  Jsonpath.md  Jsonpointer.md  Ncname.md  NegatedAssociation.md  Nodeidentifier.md  Objectidentifier.md  PairwiseCoAssociation.md  ParserConfiguration.md  PositiveOrNegativeAssociation.md  PropertyValue.md  RollupGroup.md  Sparqlpath.md  Time.md  Uri.md  Uriorcurie.md  aggregator_knowledge_source.md  associations.md  associations_for_subjects_in_common.md  closure_delta.md  closure_information_content_delta.md  closure_predicates.md  comments.md  core_triple.md  creation_date.md  date.md  denormalized_slot.md  diff_slot.md  evidence_type.md  group_object.md  include_association_attributes.md  index.md  is_creation.md  is_deletion.md  (+43 more)
class-enrichment/: Boolean.md  ClassEnrichmentConfiguration.md  ClassEnrichmentResult.md  ClassEnrichmentResultSet.md  Date.md  DateOrDatetime.md  Integer.md  Jsonpath.md  Ncname.md  Nodeidentifier.md  Objectidentifier.md  Position.md  Sparqlpath.md  String.md  Uriorcurie.md  ancestor_of_more_informative_result.md  background_count.md  descendant_of_more_informative_result.md  direction.md  index.md  p_value.md  probability.md  rank.md  sample_count.md
converters/: data-model-converter.html  index.html  obo-graph-to-cx.html  obo-graph-to-fhir.html  obo-graph-to-obo-format.html  obo-graph-to-owl.html
cross-ontology-diff/: Boolean.md  Curie.md  Date.md  DateOrDatetime.md  Decimal.md  DiffCategory.md  EntityReference.md  Float.md  Jsonpointer.md  Label.md  MappingCardinalityEnum.md  Ncname.md  Nodeidentifier.md  Objectidentifier.md  Position.md  RelationalDiff.md  Source.md  Sparqlpath.md  StructureDiffResultSet.md  Uri.md  category.md  index.md  is_functional.md  label.md  left_object_id.md  left_object_is_functional.md  left_object_label.md  left_predicate_id.md  left_predicate_label.md  left_side.md  left_source.md  left_subject_id.md  left_subject_is_functional.md  left_subject_label.md  object.md  object_mapping_cardinality.md  object_mapping_predicate.md  predicate.md  results.md  right_intermediate_ids.md  (+14 more)
datamodels/: index.html
docs/: __init__.py  architecture.html  architecture.md  architecture.rst  best-practice.rst  cli.rst  concepts.rst  conf.py  contributing.md  faq.rst  genindex.html  glossary.rst  index.html  index.rst  introduction.html  introduction.md  introduction.rst  notebooks.rst  objects.inv  rdf-owl-layering.rst  search-syntax.rst  searchindex.js  selectors.rst  utilities.rst
examples/: Command-Line-Examples.html  Developers-Tutorial.html  Developers-Tutorial.ipynb  basic-demo-semsim.html  index.html
faq/: architecture.html  commandline.html  contributing.html  general.html  index.html  ontologies.html  troubleshooting.html
funowl/: index.md  index.rst
guide/: aliases.html  associations.html  basics.html  curies-and-uris.html  enrichment.html  formats.html  index.html  learning-more.html  logical-definitions.html  mappings.html  obsoletion.html  primary-labels.html  relationships-and-graphs.html  similarity.html
howtos/: fhir-conversions.html  index.html  perform-lexical-matching.html  roll-up-annotations-to-a-subset.html  use-llms.html  use-oak-expression-language.html  validate-an-obo-ontology.html  visualize-ontology-subgraphs.html  write-a-plugin.html
implementations/: aggregator.html  bioportal.html  gilda.html  index.html  kgcl.html  obofiles.html  obograph.html  ols.html  ontobee.html  owlery.html  pronto.html  simple_obo.html  sparql.html  sqldb.html  ubergraph.html
interfaces/: association-provider.html  basic.html  class-enrichment.html  dumper.html  index.html  mapping-provider.html  obograph.html  owl.html  patcher.html  qc.html  relation-graph.html  search.html  semantic-similarity.html  subsetting.html  summary-statistics.html  text-annotator.html  validator.html
intro/: index.html  tutorial01.html  tutorial02.html  tutorial03.html  tutorial04.html  tutorial05.html  tutorial06.html  tutorial07.html  tutorial08.html
item-list/: Boolean.md  Curie.md  Date.md  Datetime.md  Double.md  Integer.md  ItemList.md  ItemListCollection.md  ItemListOrderType.md  ListItem.md  Ncname.md  Nodeidentifier.md  Objectidentifier.md  Sparqlpath.md  String.md  Thing.md  Time.md  Uri.md  Uriorcurie.md  categories.md  description.md  elementId.md  id.md  idType.md  identifiers.md  index.md  item.md  itemListElements.md  itemLists.md  itemMetadataMap.md  keywords.md  name.md  numberOfItems.md  position.md  previousItem.md  type.md  url.md  wasGeneratedBy.md
kgcl/: index.rst
lexical-index/: Activity.md  Any.md  Curie.md  Date.md  DateOrDatetime.md  Float.md  Integer.md  Jsonpath.md  LexicalGrouping.md  LexicalIndex.md  LexicalTransformation.md  LexicalTransformationPipeline.md  Ncname.md  Nodeidentifier.md  Objectidentifier.md  RelationshipToTerm.md  String.md  (+18 more)
(+5382 files in other folders)
