[project]
name = "oaklib"
version = "0.0.0"
description = "Ontology Access Kit: Python library for common ontology operations over a variety of backends"
authors = [
    {name="Chris Mungall", email="cjm@berkeleybop.org"}
]
requires-python = ">=3.9,<4,<3.13"# TODO: needs to be downgraded below 3.13 because semsimian doesn't have a 3.13 wheel.
license = "Apache-2.0"
readme = "README.md"

dependencies = [
    "curies>=0.6.6",
    "pronto>=2.5.0",
    "SPARQLWrapper",
    "SQLAlchemy>=1.4.32",
    "linkml-runtime>=1.5.3",
    "linkml-renderer>=0.3.0",
    "linkml",
    "networkx>=2.7.1",
    "sssom>=0.4.4,<1",
    "ratelimit>=2.2.1",
    "appdirs>=1.4.4",
    "semsql>=0.3.1",
    "kgcl-schema>=0.6.9,<1",
    "funowl>=0.2.0",
    "kgcl-rdflib==0.5.0",
    "llm>=0.14,<1",
    "pystow>=0.5.0",
    "class-resolver>=0.4.2",
    "ontoportal-client>=0.0.3",
    "prefixmaps>=0.1.2",
    "ols-client>=0.1.1",
    "airium>=0.2.5",
    "ndex2>=3.5.0",
    "pysolr>=3.9.0,<4",
    "eutils>=0.6.0",
    "requests-cache>1.0.1,<2",
    "click<8.2", #TODO: This currently needs to be downgraded to below 8.2 because click removed the mix_stderr parameter which in our tests.
    "pydantic",
    "jsonlines",
    "tenacity>=8.2.3",
    "defusedxml>=0.7.1",
    "ruamel.yaml",
    "setuptools<82", #TODO: This currently needs to be downgraded because we still import pkg_resources, which is no longer supported. Should be replaced by importlib (https://setuptools.pypa.io/en/latest/history.html#v82-0-0)
    "regex",

]

[dependency-groups]

dev = [
    "pytest>=7.1.3,<8",
    "Sphinx>=6.1.3",
    "pandas>=1.5.1",
    "jupyter>=1.0.0",
    "sphinx-rtd-theme>=1.0.0,<2",
    "sphinx-click>=4.4.0",
    "myst-parser>=1.0.0",
    "sphinxcontrib-mermaid>=0.8.1,<1",
    "sphinx-copybutton==0.5.1",
    "nbsphinx",
    "coverage>6.3.2,<7",
    "tox",
    "seaborn>=0.12.2,<1",
    "pip>=24.0,<25",
    "pronto<2.6", #TODO: This needs to be downgraded to handle a format error in tests/input/interneuron.obo
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
runoak = "oaklib.cli:main"
vskit = "oaklib.utilities.subsets.value_set_expander:main"
boomerang = "oaklib.utilities.mapping.boomer_utils:main"

[project.optional-dependencies]
docs = [
    "Sphinx>=6.1.3",
    "sphinx-rtd-theme>=1.0.0,<2",
    "sphinxcontrib-mermaid>=0.8.1,<1",
    "sphinx-copybutton==0.5.1",
]
gilda = [
    "scipy", 
    "gilda>=1.0.0,<1.5.0", #TODO: Needs to be downgraded because `from gilda.ner import annotate` returns an object instead of tuples.  
    "urllib3<2",
]
bioservices = ["bioservices"]
llm = [
#    "llm", #This is a regular dependency.
    "aiohttp",
    "html2text",
]
seaborn = ["seaborn"]
semsimian = ["semsimian>=0.2.18"]

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
reverse_relative = true

[tool.codespell]
skip = '.git,*.pdf,*.svg,poetry.lock,*.obo,*.ttl,*.ofn,*.gaf,*.tsv,*.json,input,*.ipynb,*.csv,*.kgcl,*.yaml'
ignore-regex = '(^\s*"image/\S+": ".*|[a-z]*\.\.\.)'
ignore-words-list = 'ptd,ot,nd,ser,oger,gard,te,fo,fof,bu,ue,ois,processus,infarction,infarctions,assertIn,morpholgy,formate,HDA,anc,disjointness'

[tool.ruff]
lint.extend-ignore = [
    "D211",  # `no-blank-line-before-class`
    "D212",  # `multi-line-summary-first-line`
    "E731",  # Do not assign a `lambda` expression, use a `def`
    "B005",  # Using `.strip()` with multi-character strings is misleading the reader
    "S101",  # Use of `assert` detected
    "S607",  # Starting a process with a partial executable path
    "S608",  # Possible SQL injection vector through string-based query construction
    "S603",  # `subprocess` call: check for execution of untrusted input
    "B024",  # XXX is an abstract base class, but it has no abstract methods
    ]
lint.exclude = ["src/oaklib/datamodels/*"]
line-length = 120

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]

# Select or ignore from https://beta.ruff.rs/docs/rules/
lint.select = [
    "B",  # bugbear
    # "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort 
    "S",  # flake8-bandit
    "W",  # Warning
]

lint.unfixable = []
target-version = "py310"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
