[project]
name = "oaklib"
version = "0.0.0"
description = "Ontology Access Kit: Python library for common ontology operations over a variety of backends"
authors = [
    {name="Chris Mungall", email="cjm@berkeleybop.org"}
]
requires-python = ">=3.10,<4,<3.14"
license = "Apache-2.0"
readme = "README.md"

dependencies = [
    "curies>=0.6.6,<0.11", #TODO: needs to be downgraded below 0.11 because curie.convert.parse_uri is returning None; causing TestOboGraphUtils to fail
    "pronto",
    "SPARQLWrapper",
    "SQLAlchemy>=1.4.32",
    "linkml-runtime>=1.5.3",
    "linkml-renderer>=0.3.0",
    "linkml==1.10.0", #TODO: gen-doc fails with linkml>1.9 -- specifically  gen-doc --dialect myst  src/oaklib/datamodels/ontology_metadata.yaml -d docs/datamodels/ontology-metadata/
    "networkx>=2.7.1",
    "sssom",
    "ratelimit>=2.2.1",
    "appdirs>=1.4.4",
    "semsql>=0.3.1",
    "kgcl-schema>=0.6.9,<1",
    "funowl>=0.2.0",
    "kgcl-rdflib==0.5.0",
    "llm>=0.14,<1",
    "pystow>=0.7.28",
    "class-resolver>=0.4.2",
    "ontoportal-client>=0.0.3",
    "prefixmaps>=0.1.2",
    "ols-client>=0.1.1",
    "airium>=0.2.5",
    "ndex2>=3.5.0",
    "pysolr>=3.9.0,<4",
    "eutils>=0.6.0", #TODO: eutils==0.6.1 is only created for python>=3.12. It's forcing us to use setuptools. We need to go into the innards of the code and replace this dependency with an api call - GHIssue 852
    "setuptools<82", #We need this for eutils==0.6.0    
    "requests-cache>1.0.1,<2",
    "click",
    "pydantic",
    "jsonlines",
    "tenacity>=8.2.3",
    "defusedxml>=0.7.1",
    "ruamel.yaml",
    "regex", #TODO: regex is usually a python built-in but regex.sub will fail under weird circumstances unless this is imported.
    "greenlet",
]

[dependency-groups]

dev = [
    "pytest>=7.1.3,<8",
    "Sphinx>=6.1.3",
    "pandas>=1.5.1",
    "jupyter>=1.0.0",
    "sphinx-rtd-theme>=1.0.0,<2",
    "sphinx-click>=4.4.0",
    "myst-parser>=1.0.0",
    "sphinxcontrib-mermaid>=0.8.1,<1",
    "sphinx-copybutton==0.5.1",
    "nbsphinx",
    "coverage>6.3.2,<7",
    "tox",
    "seaborn>=0.12.2,<1",
    "pip>=24.0,<25",
    "ruff>=0.15.7",
]

gilda = [
    "scipy", 
    "gilda>=1.0.0,<1.5.0", #TODO: Needs to be downgraded because `from gilda.ner import annotate` returns an object instead of tuples.  
    "urllib3<2",
    "scikit-learn>1.4.2",
]

semsimian = ["semsimian>=0.2.18"]


[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project.scripts]
runoak = "oaklib.cli:main"
vskit = "oaklib.utilities.subsets.value_set_expander:main"
boomerang = "oaklib.utilities.mapping.boomer_utils:main"

[project.optional-dependencies]
docs = [
    "Sphinx>=6.1.3",
    "sphinx-rtd-theme>=1.0.0,<2",
    "sphinxcontrib-mermaid>=0.8.1,<1",
    "sphinx-copybutton==0.5.1",
]


bioservices = ["bioservices"]
llm = [
#    "llm", #This is a regular dependency.
    "aiohttp",
    "html2text",
]
seaborn = ["seaborn"]

[tool.uv]
default-groups = ["dev", "gilda"]

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
reverse_relative = true

[tool.codespell]
skip = '.git,*.pdf,*.svg,poetry.lock,*.obo,*.ttl,*.ofn,*.gaf,*.tsv,*.json,input,*.ipynb,*.csv,*.kgcl,*.yaml'
ignore-regex = '(^\s*"image/\S+": ".*|[a-z]*\.\.\.)'
ignore-words-list = 'ptd,ot,nd,ser,oger,gard,te,fo,fof,bu,ue,ois,processus,infarction,infarctions,assertIn,morpholgy,formate,HDA,anc,disjointness'

[tool.ruff]
lint.extend-ignore = [
    #These are conventions that we intentionally ignore.
    "D202", #D202 [*] No blank lines allowed after function docstring
    "D203", #D203 [*] 1 blank line required before class 
    "D212", #D212 [*] Multi-line docstring summary should start at the first line (in direct conflict with D213)


    "D401", #D401 First line of docstring should be in imperative mood
    "D406", #D406 [*] Section name should end with a newline

    "D409", #D409 [*] Section underline should match the length of its name

    "LOG015", #LOG015 `info()` call on root logger
]

lint.exclude = [
    "src/oaklib/datamodels/*", #The datamodels are autogenerated. Errors need to be fixed in pygenerator in LinkML.
    "*.ipynb", #These are for example use cases.
    "docs/examples/*", #These are for example use cases.
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []


# Select or ignore from https://beta.ruff.rs/docs/rules/
lint.select = [
    "B",  # bugbear
    "D",  # 
    "D416",
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort 
    "S",  # flake8-bandit
    "W",  # Warning
    "TC", # Type checking
    "COM818", 
    "COM819",
    "ICN", #flake8-import-conventions (ICN)
    "INP", #implicit-namespace-package
    "LOG",
    "Q",
#    "G", https://docs.astral.sh/ruff/rules/#flake8-logging-format-g We should one day turn this on; however it will take a bit to update
#    "C4",  #https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4 We should turn this on
#    "C90", #https://docs.astral.sh/ruff/rules/complex-structure/ We should turn this on
#    "FLY",
#    "ARG", # Unused-arguments 406 errors found
#    "PTH", #Use pathlib
]

line-length = 120
target-version = "py313"

#[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
#max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    #Hard to fix.
    "D",
    "E731", #E731 Do not assign a `lambda` expression, use a `def`
    "S101", #S101 Use of `assert` detected
    "S603",  #S603 `subprocess` call: check for execution of untrusted input
    "S608", #S608 Possible SQL injection vector through string-based query construction
    "LOG015", #LOG015 `info()` call on root logger
    "G",
    #Should fix
    "S607", #S607 Starting a process with a partial executable path
]
"src/oaklib/{cli,query,resource,selector,types,__init__}.py" = [
    #Hard to fix.
    "D100", #D100 Missing docstring in public module
    "D101", #D101 Missing docstring in public class
    "D102", #D102 Missing docstring in public methods
    "D103", #D103 Missing docstring in public function
    "D105", #D105 Missing docstring in magic method

    #Can fix.
    "D412", #D412 [*] No blank lines allowed between a section header and its content ("Example")
    "D413", #D413 [*] Missing blank line after last section ("Example") 
    "D415", #D415 First line should end with a period, question mark, or exclamation point
]

"src/oaklib/{conf,converters,parsers,implementations,indexes,inference,interfaces,io,mappers,transformers,utilities}/*.py" = [
    #Hard to fix
    "D100", #D100 Missing docstring in public module
    "D101", #D101 Missing docstring in public class
    "D102", #D102 Missing docstring in public method
    "D103", #D103 Missing docstring in public function
    "D104", #D104 Missing docstring in public package
    "D105", #D105 Missing docstring in magic method
    "D106", #D106 Missing docstring in public nested class
    "D107", #D107 Missing docstring in `__init__`
    "E731", #E731 Do not assign a `lambda` expression, use a `def`
    "S608",  # Possible SQL injection vector through string-based query construction

    #Hard to fix, but probably should be fixed
    "S603", #S603 `subprocess` call: check for execution of untrusted input

    #Need to fix.
    "S101", #S603 Use of `assert` detected
    "S607", #S607 Starting a process with a partial executable path

    #Can fix.
    "D209", #D209 [*] Multi-line docstring closing quotes should be on a separate line
    "D404", #D404 First word of the docstring should not be "This"
    "D412", #D412 [*] No blank lines allowed between a section header and its content ("Examples")
    "D413", #D413 [*] Missing blank line after last section ("Examples")
    "D415", #D415 First line should end with a period, question mark, or exclamation point
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
#convention = "google"

#[tool.uv.sources]
#linkml = { git = "https://github.com/saschabuehrle/linkml", branch = "fix/issue-3297" }